[package]
name = "filetime_creation"
authors = ["29 <791603901@qq.com>"]
version = "0.1.7"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["timestamp", "filetime", "SetFileTime", "windows", "btime"]
categories = ["date-and-time", "filesystem", "os::windows-apis"]
repository = "https://github.com/czy-29/filetime_creation"
homepage = "https://github.com/czy-29/filetime_creation"
documentation = "https://docs.rs/filetime_creation"
description = """
An enhanced version of filetime, which can set file creation time on Windows before Rust 1.75.
"""
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
filetime = "0.2.23"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem"
]

[dev-dependencies]
tempfile = "3"
